--- a/package.json
+++ b/package.json
@@ -83,10 +83,11 @@
     "minimatch": "^3.1.2",
     "mongodb": "^6.14.2",
     "mongodb-connection-string-url": "^3.0.2",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.12.2",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.0.0",
+    "multer": "^1.4.5-lts.2",
     "negotiator": "^0.6.3",
     "normalize-path": "^3.0.0",
     "object-assign": "^4.1.1",
